fix(PN-18428): fix RECAG012EventBuilder